test container memory